--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -15,7 +15,7 @@
         android:ems="10"
         android:focusable="true"
         android:focusableInTouchMode="true"
-        android:hint="Write Here"
+        android:hint="view clear copy eee"
         android:inputType="textPersonName"
         android:textColor="#FFFFFF"
         android:textColorHint="#7A7A7A"
